--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eero</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <header>
+      <div>
+        <p>Free 2-day shipping | 30-day money back guarantee</p>
+      </div>
+      <nav>
+          <a href="/"><img src="./images/logo.svg" alt="logo">
+          <ul>
+              <li><a href="#">Products</a></li>
+              <li><a href="#">How it works</a></li>
+              <li><a href="#">Technology</a></li>
+              <li><a href="#">eero Secure</a></li>
+              <li><a href="#">Support</a></li>
+              <li><a href="#">Find your system</a></li>
+          </ul>
+          <a href="#">Shop</a>
+      </nav>
+    </header>
+  </body>
 </html>
