--- a/index.html
+++ b/index.html
@@ -24,5 +24,16 @@
           <a href="#">Shop</a>
       </nav>
     </header>
+
+    <!-- section hero -->
+    <section>
+      <h1>Wi-Fi 6 is here.</h1>
+      <p>The future of home wifi is fast.</p>
+      <a href="">SHOP WIFI SOLUTIONS</a>
+      <img src="./images/hero-wifi-router.png" alt="wifi router">
+    </section>
+   
+   
+
   </body>
 </html>
