--- a/index.html
+++ b/index.html
@@ -32,6 +32,33 @@
       <a href="">SHOP WIFI SOLUTIONS</a>
       <img src="./images/hero-wifi-router.png" alt="wifi router">
     </section>
+
+    <!--Promo section-->
+    <section>
+      <div>
+        <p>
+          Explore eero systems on
+        </p>
+        <a href="#">
+          <img src="./images/amazon-logo.svg" alt="amazon-logo">
+          <span>
+            Shop now
+          </span>
+        </a>
+      </div>
+      <h2>
+        More wifi for the devices in your connected home.
+      </h2>
+      <p>
+        eero 6 systems use the power of Wi-Fi 6 to deliver faster speeds, increase your internet’s efficiency, and reduce
+        network congestion. Say goodbye to dead spots and buffering with a connection that doesn’t slow you down, even as you
+        add more devices.
+      </p>
+      <a href="#">
+        Find your eero system
+      </a>
+      <img src="./images/home-devices.png" alt="people use devices">
+    </section>
    
    
 
