--- a/index.html
+++ b/index.html
@@ -60,7 +60,28 @@
       <img src="./images/home-devices.png" alt="people use devices">
     </section>
    
-   
-
+     <!-- Devices section -->
+    <section>
+        <h2 hidden>Devices</h2>
+        <ul>
+           <li>
+                <div>Wi-Fi 6</div>
+                <h3>eero Pro 6</h3>
+                <p>The fastest eero yet.</p>
+                <p>Tri-band Wi-Fi 6 system designed for homes with gigabit internet connections.</p>
+                <p>Starting at $229</p>
+                <a href="#">Shop now</a>
+           </li>
+            <li>
+                <div>Wi-Fi 6</div>
+                <h3>eero 6</h3>
+                <p>Experience Wi-Fi 6—the new standard for home wifi..</p>
+                <p>Dual-band Wi-Fi 6 system designed for homes with 500 Mbps internet connections.</p>
+                <p>Starting at $129</p>
+                <a href="#">Shop now</a>
+            </li>
+        </ul>
+        <a href="#">Compare All Models</a>
+    </section>
   </body>
 </html>
