--- a/index.html
+++ b/index.html
@@ -83,5 +83,15 @@
         </ul>
         <a href="#">Compare All Models</a>
     </section>
+    
+    <!-- Section artikle -->
+    <section style="background: #404040;">
+      <p>
+        “eero combats frustrating Wi-Fi dead zones with an armada of little wireless routers.”
+      </p>
+      <a href="#">
+        <img src="./images/journal.svg" alt="Wall streeat journal">
+      </a>
+    </section>
   </body>
 </html>
