--- a/index.html
+++ b/index.html
@@ -5,23 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eero</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href= "./css/style.css">
   </head>
   <body>
-    <header>
-      <div>
-        <p>Free 2-day shipping | 30-day money back guarantee</p>
+    <header class="header">
+      <div class="promo-bar">
+        <p class="promo-bar-text">Free 2-day shipping | 30-day money back guarantee</p>
       </div>
-      <nav>
-          <a href="/"><img src="./images/logo.svg" alt="logo">
-          <ul>
-              <li><a href="#">Products</a></li>
-              <li><a href="#">How it works</a></li>
-              <li><a href="#">Technology</a></li>
-              <li><a href="#">eero Secure</a></li>
-              <li><a href="#">Support</a></li>
-              <li><a href="#">Find your system</a></li>
+      <nav class="nav">
+          <a href="/" class="logo"><img src="./images/logo.svg" alt="logo">
+          <ul class="nav-list">
+              <li class="nav-item"><a href="#" class="nav-link">Products</a></li>
+              <li class="nav-item"><a href="#" class="nav-link">How it works</a></li>
+              <li class="nav-item"><a href="#" class="nav-link">Technology</a></li>
+              <li class="nav-item"><a href="#" class="nav-link">eero Secure</a></li>
+              <li class="nav-item"><a href="#" class="nav-link">Support</a></li>
+              <li class="nav-item"><a href="#" class="nav-link">Find your system</a></li>
           </ul>
-          <a href="#">Shop</a>
+          <a href="#" class="btn-link">Shop</a>
       </nav>
     </header>
 
