--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eero</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
@@ -15,18 +18,20 @@
       <div class="promo-bar">
         <p class="promo-bar-text">Free 2-day shipping | 30-day money back guarantee</p>
       </div>
-      <nav class="nav">
-          <a href="/" class="logo"><img src="./images/logo.svg" alt="logo">
-          <ul class="nav-list">
-              <li class="nav-item"><a href="#" class="nav-link">Products</a></li>
-              <li class="nav-item"><a href="#" class="nav-link">How it works</a></li>
-              <li class="nav-item"><a href="#" class="nav-link">Technology</a></li>
-              <li class="nav-item"><a href="#" class="nav-link">eero Secure</a></li>
-              <li class="nav-item"><a href="#" class="nav-link">Support</a></li>
-              <li class="nav-item"><a href="#" class="nav-link">Find your system</a></li>
-          </ul>
-          <a href="#" class="btn-link">Shop</a>
-      </nav>
+      <div class="container">
+        <nav class="nav">
+            <a href="/" class="logo"><img src="./images/logo.svg" alt="logo">
+            <ul class="nav-list">
+                <li class="nav-item"><a href="#" class="nav-link">Products</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">How it works</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">Technology</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">eero Secure</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">Support</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">Find your system</a></li>
+            </ul>
+            <a href="#" class="btn-link">Shop</a>
+        </nav>
+      </div>
     </header>
 
     <!-- section hero -->
