--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
       <div class="container">
         <nav class="nav">
-            <a href="/" class="logo"><img src="./images/logo.svg" alt="logo">
+            <a href="/" class="logo"><img src="./images/logo.svg" alt="logo"></a>
             <ul class="nav-list">
                 <li class="nav-item"><a href="#" class="nav-link">Products</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">How it works</a></li>
@@ -35,11 +35,13 @@
     </header>
 
     <!-- section hero -->
-    <section>
-      <h1>Wi-Fi 6 is here.</h1>
-      <p>The future of home wifi is fast.</p>
-      <a href="">SHOP WIFI SOLUTIONS</a>
-      <img src="./images/hero-wifi-router.png" alt="wifi router">
+    <section class="hero">
+      <div class="container hero-container">
+        <h1 class="title">Wi-Fi 6 is here.</h1>
+        <p class="hero-text">The future of home wifi is fast.</p>
+        <a href="" class="transparent-btn hero-btn">SHOP WIFI SOLUTIONS</a>
+        <img src="./images/hero-wifi-router.png" alt="wifi router" class="hero-image">
+      </div>
     </section>
 
     <!--Promo section-->
