--- a/index.html
+++ b/index.html
@@ -45,30 +45,32 @@
     </section>
 
     <!--Promo section-->
-    <section>
-      <div>
-        <p>
-          Explore eero systems on
+    <section class="promo">
+      <div class="container">
+        <div class="shop-amazon">
+          <p class="shop-amazon__text">
+            Explore eero systems on
+          </p>
+          <a class="shop-amazon__link" href="#">
+            <img src="./images/amazon-logo.svg" alt="amazon-logo">
+            <span>
+              Shop now
+            </span>
+          </a>
+        </div>
+        <h2 class="promo__title">
+          More wifi for the devices in your connected home.
+        </h2>
+        <p class="promo__text">
+          eero 6 systems use the power of Wi-Fi 6 to deliver faster speeds, increase your internet’s efficiency, and reduce
+          network congestion. Say goodbye to dead spots and buffering with a connection that doesn’t slow you down, even as you
+          add more devices.
         </p>
-        <a href="#">
-          <img src="./images/amazon-logo.svg" alt="amazon-logo">
-          <span>
-            Shop now
-          </span>
+        <a class="promo__link" href="#">
+          Find your eero system
         </a>
+        <img class="promo__img" src="./images/home-devices.png" alt="people use devices">
       </div>
-      <h2>
-        More wifi for the devices in your connected home.
-      </h2>
-      <p>
-        eero 6 systems use the power of Wi-Fi 6 to deliver faster speeds, increase your internet’s efficiency, and reduce
-        network congestion. Say goodbye to dead spots and buffering with a connection that doesn’t slow you down, even as you
-        add more devices.
-      </p>
-      <a href="#">
-        Find your eero system
-      </a>
-      <img src="./images/home-devices.png" alt="people use devices">
     </section>
    
      <!-- Devices section -->
