add clacess to sevices

--- a/index.html
+++ b/index.html
@@ -1,139 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Eero</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
-      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./css/style.css" />
-  </head>
-  <body>
-    <header class="header">
-      <div class="promo-bar">
-        <p class="promo-bar-text">
-          Free 2-day shipping | 30-day money back guarantee
-        </p>
-      </div>
-      <div class="container">
-        <nav class="nav">
-          <a href="/" class="logo"
-            ><img src="./images/logo.svg" alt="logo"
-          /></a>
-          <ul class="nav-list">
-            <li class="nav-item"><a href="#" class="nav-link">Products</a></li>
-            <li class="nav-item">
-              <a href="#" class="nav-link">How it works</a>
-            </li>
-            <li class="nav-item">
-              <a href="#" class="nav-link">Technology</a>
-            </li>
-            <li class="nav-item">
-              <a href="#" class="nav-link">eero Secure</a>
-            </li>
-            <li class="nav-item"><a href="#" class="nav-link">Support</a></li>
-            <li class="nav-item">
-              <a href="#" class="nav-link">Find your system</a>
-            </li>
-          </ul>
-          <a href="#" class="btn-link">Shop</a>
-        </nav>
-      </div>
-    </header>
 
-    <!-- section hero -->
-    <section class="hero">
-      <div class="container hero-container">
-        <h1 class="title">Wi-Fi 6 is here.</h1>
-        <p class="hero-text">The future of home wifi is fast.</p>
-        <a href="" class="transparent-btn hero-btn">SHOP WIFI SOLUTIONS</a>
-        <img
-          src="./images/hero-wifi-router.png"
-          alt="wifi router"
-          class="hero-image"
-        />
-      </div>
-    </section>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Eero</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="./css/style.css" />
+</head>
 
-    <!--Promo section-->
-    <section class="promo">
-      <div class="container">
-        <div class="shop-amazon">
-          <p class="shop-amazon__text">Explore eero systems on</p>
-          <a class="shop-amazon__link" href="#">
-            <img src="./images/amazon-logo.svg" alt="amazon-logo" />
-            <span> Shop now </span>
-          </a>
-        </div>
-        <h2 class="promo__title">
-          More wifi for the devices in your connected home.
-        </h2>
-        <p class="promo__text">
-          eero 6 systems use the power of Wi-Fi 6 to deliver faster speeds,
-          increase your internet’s efficiency, and reduce network congestion.
-          Say goodbye to dead spots and buffering with a connection that doesn’t
-          slow you down, even as you add more devices.
-        </p>
-        <a class="promo__link btn-link" href="#"> Find your eero system </a>
-        <img
-          class="promo__img"
-          src="./images/home-devices.png"
-          alt="people use devices"
-        />
-      </div>
-    </section>
+<body>
+  <header class="header">
+    <div class="promo-bar">
+      <p class="promo-bar-text">
+        Free 2-day shipping | 30-day money back guarantee
+      </p>
+    </div>
+    <div class="container">
+      <nav class="nav">
+        <a href="/" class="logo"><img src="./images/logo.svg" alt="logo" /></a>
+        <ul class="nav-list">
+          <li class="nav-item"><a href="#" class="nav-link">Products</a></li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">How it works</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">Technology</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">eero Secure</a>
+          </li>
+          <li class="nav-item"><a href="#" class="nav-link">Support</a></li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">Find your system</a>
+          </li>
+        </ul>
+        <a href="#" class="btn-link">Shop</a>
+      </nav>
+    </div>
+  </header>
 
-    <!-- Devices section -->
-    <section>
-      <h2 hidden>Devices</h2>
-      <ul>
-        <li>
-          <div>Wi-Fi 6</div>
-          <h3>eero Pro 6</h3>
-          <p>The fastest eero yet.</p>
-          <p>
+  <!-- section hero -->
+  <section class="hero">
+    <div class="container hero-container">
+      <h1 class="title">Wi-Fi 6 is here.</h1>
+      <p class="hero-text">The future of home wifi is fast.</p>
+      <a href="" class="transparent-btn hero-btn">SHOP WIFI SOLUTIONS</a>
+      <img src="./images/hero-wifi-router.png" alt="wifi router" class="hero-image" />
+    </div>
+  </section>
+
+  <!--Promo section-->
+  <section class="promo">
+    <div class="container">
+      <div class="shop-amazon">
+        <p class="shop-amazon__text">Explore eero systems on</p>
+        <a class="shop-amazon__link" href="#">
+          <img src="./images/amazon-logo.svg" alt="amazon-logo" />
+          <span> Shop now </span>
+        </a>
+      </div>
+      <h2 class="promo__title">
+        More wifi for the devices in your connected home.
+      </h2>
+      <p class="promo__text">
+        eero 6 systems use the power of Wi-Fi 6 to deliver faster speeds,
+        increase your internet’s efficiency, and reduce network congestion.
+        Say goodbye to dead spots and buffering with a connection that doesn’t
+        slow you down, even as you add more devices.
+      </p>
+      <a class="promo__link btn-link" href="#"> Find your eero system </a>
+      <img class="promo__img" src="./images/home-devices.png" alt="people use devices" />
+    </div>
+  </section>
+
+  <!-- Devices section -->
+  <section class="devices">
+    <div class="container">
+      <h2 hidden class="devices__title">Devices</h2>
+      <ul class="devices__list">
+        <li class="devices__item router">
+          <div class="router__label">Wi-Fi 6</div>
+          <h3 class="router__title">eero Pro 6</h3>
+          <p class="router__subtitle">The fastest eero yet.</p>
+          <p class="router__text">
             Tri-band Wi-Fi 6 system designed for homes with gigabit internet
             connections.
           </p>
-          <p>Starting at $229</p>
-          <a href="#">Shop now</a>
+          <p class="router__text">Starting at <span class="router__price">$229</span></p>
+          <a href="#" class="btn-link router__btn">Shop now</a>
         </li>
-        <li>
-          <div>Wi-Fi 6</div>
-          <h3>eero 6</h3>
-          <p>Experience Wi-Fi 6—the new standard for home wifi..</p>
-          <p>
+        <li class="devices__item router">
+          <div class="router__label">Wi-Fi 6</div>
+          <h3 class="router__title">eero 6</h3>
+          <p class="router__subtitle">Experience Wi-Fi 6—the new standard for home wifi..</p>
+          <p class="router__text">
             Dual-band Wi-Fi 6 system designed for homes with 500 Mbps internet
             connections.
           </p>
-          <p>Starting at $129</p>
-          <a href="#">Shop now</a>
+          <p class="router__text">Starting at <span class="router__price">$129</span></p>
+          <a href="#" class="btn-link router__btn">Shop now</a>
         </li>
       </ul>
       <a href="#">Compare All Models</a>
-    </section>
+    </div>
+  </section>
 
-    <!-- Section artikle -->
-    <section style="background: #404040">
-      <p>
-        “eero combats frustrating Wi-Fi dead zones with an armada of little
-        wireless routers.”
-      </p>
-      <a href="#">
-        <img src="./images/journal.svg" alt="Wall streeat journal" />
-      </a>
-    </section>
-  </body>
+  <!-- Section artikle -->
+  <section style="background: #404040">
+    <p>
+      “eero combats frustrating Wi-Fi dead zones with an armada of little
+      wireless routers.”
+    </p>
+    <a href="#">
+      <img src="./images/journal.svg" alt="Wall streeat journal" />
+    </a>
+  </section>
+</body>
+
 </html>
