--- a/src/index.html
+++ b/src/index.html
@@ -81,45 +81,7 @@
       <img class="promo__img" src="./images/home-devices.png" alt="people use devices" />
     </div>
   </section>
-
-  <!-- Devices section -->
-  <section class="devices">
-    <div class="container">
-      <h2 hidden class="devices__title">Devices</h2>
-      <ul class="devices__list">
-        <li class="devices__item router">
-          <div class="router__label">Wi-Fi 6</div>
-          <h3 class="router__title">eero Pro 6</h3>
-          <p class="router__subtitle">The fastest eero yet.</p>
-          <p class="router__text">
-            Tri-band Wi-Fi 6 system designed for homes with gigabit internet
-            connections.
-          </p>
-          <p class="router__text">
-            Starting at <span class="router__price">$229</span>
-          </p>
-          <a href="#" class="btn-link router__btn">Shop now</a>
-        </li>
-        <li class="devices__item router">
-          <div class="router__label">Wi-Fi 6</div>
-          <h3 class="router__title">eero 6</h3>
-          <p class="router__subtitle">
-            Experience Wi-Fi 6—the new standard for home wifi..
-          </p>
-          <p class="router__text">
-            Dual-band Wi-Fi 6 system designed for homes with 500 Mbps internet
-            connections.
-          </p>
-          <p class="router__text">
-            Starting at <span class="router__price">$129</span>
-          </p>
-          <a href="#" class="btn-link router__btn">Shop now</a>
-        </li>
-      </ul>
-      <a href="#">Compare All Models</a>
-    </div>
-  </section>
-
+  <include src="./partials/devices.html"></include>
   <!-- Section artikle -->
   <section style="background: #404040">
     <p>
