--- a/src/index.html
+++ b/src/index.html
@@ -92,11 +92,26 @@
       <img src="./images/journal.svg" alt="Wall streeat journal" />
     </a>
   </section>
+  <!-- slider -->
+  <include src="./partials/slider.html"></include>
   <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
   <include src="./partials/example.html"></include>
   
   <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
+  <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <!-- <script type="text/javascript" src="./js/slick.min.js"></script> -->
+  <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
   <script src="./index.js"></script>
+  <script>
+    $('.slider').slick({
+    dots: true,
+    infinite: true,
+    speed: 500,
+    fade: true,
+    cssEase: 'linear'
+  }); 
+</script>
   <!-- <script src="./js/wow.min.js"></script> -->
   <!-- <script>
     new WOW().init();
