--- a/src/index.html
+++ b/src/index.html
@@ -50,10 +50,10 @@
   <section class="hero">
     <div class="container hero-container">
       <h1 class="title animate__animated animate__heartBeat wow">
-        Wi-Fi 6 is here.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, molestiae!
       </h1>
-      <p class="hero-text">The future of home wifi is fast.</p>
-      <a href="" class="transparent-btn hero-btn">SHOP WIFI SOLUTIONS</a>
+      <p class="hero-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit similique explicabo eaque accusamus? At illum aliquam perferendis aut, sit debitis quibusdam officia sint fuga pariatur vel placeat omnis sapiente consequatur exercitationem ipsa magnam? Voluptatem eum ad fugiat numquam soluta. Voluptates.</p>
+      <a href="" class="transparent-btn hero-btn">Lorem, ipsum dolor.</a>
       <img src="./images/hero-wifi-router.png" alt="wifi router" class="hero-image" />
     </div>
   </section>
