--- a/src/index.html
+++ b/src/index.html
@@ -50,10 +50,10 @@
   <section class="hero">
     <div class="container hero-container">
       <h1 class="title animate__animated animate__heartBeat wow">
-        Wi-Fi 6 is here.
+        My heading with conflict
       </h1>
-      <p class="hero-text">The future of home wifi is fast.</p>
-      <a href="" class="transparent-btn hero-btn">SHOP WIFI SOLUTIONS</a>
+      <p class="hero-text">The future of home wifi is fast(old text).</p>
+      <a href="" class="transparent-btn hero-btn">NEW BUTTON</a>
       <img src="./images/hero-wifi-router.png" alt="wifi router" class="hero-image" />
     </div>
   </section>
@@ -96,7 +96,7 @@
   <include src="./partials/slider.html"></include>
   <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
   <include src="./partials/example.html"></include>
-  
+
   <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
   <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
   <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
@@ -110,7 +110,7 @@
     speed: 500,
     fade: true,
     cssEase: 'linear'
-  }); 
+  });
 </script>
   <!-- <script src="./js/wow.min.js"></script> -->
   <!-- <script>
